# alert-timer

./: .gitignore  README.md  package.json  pnpm-lock.yaml
app/: app.js  index.html  mini.css  mini.html  mini.js  overlay.css  overlay.html  overlay.js  styles.css
crates/alert-timer-core/: Cargo.toml
crates/alert-timer-core/src/: lib.rs  timer_engine.rs
crates/alert-timer-core/tests/: timer_engine_boundaries.rs
scripts/: asset-policy.test.mjs  branding.test.mjs  coverage-core.ps1  generate-icons.ps1  repack-nsis-current-user-highest.mjs  static-server.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diagnostics.rs  key_listener.rs  lib.rs  main.rs  models.rs  overlay.rs  privilege.rs  settings_store.rs  tray.rs
