[package]
name = "alert-timer"
version = "0.1.1"
description = "A low-resource Tauri timer overlay for skill recast reminders."
authors = ["AlertTimer"]
edition = "2024"

[lib]
name = "alert_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "AlertTimer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
alert-timer-core = { path = "../crates/alert-timer-core" }
anyhow = "1.0.102"
dirs = "6.0.0"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
thiserror = "2.0.18"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
